trying to build on netlify

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-  "cSpell.words": ["Calera", "Lexi"]
+  "cSpell.words": [
+    "Calera",
+    "Lexi"
+  ],
+  "liveServer.settings.port": 5501
 }
